tests/snapshots/execution_spec__json_to_config_spec__boolean.json.snap
---
source: tests/json_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  boolean: Boolean @http(path: "/user/12/online")
}
