tests/snapshots/execution_spec__json_to_config_spec__incompatible_properties.json.snap
---
source: tests/json_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

scalar Any

type Query {
  root: T1 @http(path: "/")
}

type T1 {
  campaignTemplates: Any
  colors: [Any]
}
