tests/snapshots/execution_spec__json_to_config_spec__nested_same_properties.json.snap
---
source: tests/json_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  root: T4 @http(path: "/")
}

type T1 {
  age: Int
}

type T2 {
  container: T1
  name: String
}

type T3 {
  container: T2
  name: String
}

type T4 {
  container: T3
}
