tests/snapshots/execution_spec__json_to_config_spec__null.json.snap
---
source: tests/json_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  empty(age: Int!): Empty @http(path: "/users?age={{.args.age}}")
}
