tests/snapshots/execution_spec__json_to_config_spec__number.json.snap
---
source: tests/json_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  root(verified_user: Boolean!): Int @http(path: "/users?verified_user={{.args.verified_user}}")
}
